--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   "scripts": {
     "clean": "rimraf dist",
     "compile": "better-npm-run compile",
-    "lint": "eslint bin build config server src tests",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint src tests; exit 0",
+    "lint:fix": "eslint src tests --fix; exit 0",
     "start": "better-npm-run start",
+    "start:prod": "better-npm-run start:prod",
     "dev": "better-npm-run dev",
+    "dev:prod": "better-npm-run dev:prod",
     "dev:no-debug": "npm run dev -- --no_debug",
     "test": "better-npm-run test",
     "test:dev": "npm run test -- --watch",
+    "build": "better-npm-run build",
+    "build:prod": "better-npm-run build:prod",
     "deploy": "better-npm-run deploy",
-    "deploy:dev": "better-npm-run deploy:dev",
     "deploy:prod": "better-npm-run deploy:prod",
+    "release:patch": "npm version patch && npm run deploy",
+    "release:minor": "npm version minor && npm run deploy",
+    "release:major": "npm version major && npm run deploy",
     "codecov": "cat coverage/*/lcov.info | codecov"
   },
   "betterScripts": {
@@ -36,29 +42,54 @@
         "DEBUG": "app:*"
       }
     },
-    "deploy": {
-      "command": "npm run lint && npm run test && npm run clean && npm run compile",
+    "dev:prod": {
+      "command": "nodemon --exec babel-node bin/server",
       "env": {
+        "NODE_ENV": "development",
+        "STAGE": "production",
         "DEBUG": "app:*"
       }
     },
-    "deploy:dev": {
-      "command": "npm run deploy",
+    "build": {
+      "command": "npm run clean && npm run compile",
       "env": {
-        "NODE_ENV": "development",
+        "NODE_ENV": "production",
+        "DEBUG": "app:*"
+      }
+    },
+    "build:prod": {
+      "command": "npm run build",
+      "env": {
+        "NODE_ENV": "production",
+        "STAGE": "production",
+        "DEBUG": "app:*"
+      }
+    },
+    "deploy": {
+      "command": "npm run build -- -- --s3",
+      "env": {
+        "NODE_ENV": "production",
         "DEBUG": "app:*"
       }
     },
     "deploy:prod": {
-      "command": "npm run deploy",
+      "command": "npm run build -- -- --s3",
       "env": {
         "NODE_ENV": "production",
+        "STAGE": "production",
         "DEBUG": "app:*"
       }
     },
     "start": {
       "command": "babel-node bin/server",
       "env": {
+        "DEBUG": "app:*"
+      }
+    },
+    "start:prod": {
+      "command": "babel-node bin/server",
+      "env": {
+        "NODE_ENV": "production",
         "DEBUG": "app:*"
       }
     },
@@ -77,80 +108,120 @@
   "author": "Ranier Montalbo",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
+    "auth0-lock": "^9.2.1",
+    "aws-mqtt-client": "0.0.4",
+    "aws-sdk": "^2.5.5",
+    "axios": "^0.12.0",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-rewire": "^1.0.0-rc-6",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.14.0",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.11.6",
     "babel-runtime": "^6.11.6",
+    "base64-url": "^1.3.2",
     "better-npm-run": "0.0.11",
+    "brfs": "^1.4.3",
+    "browser-filesaver": "^1.1.1",
+    "card-validator": "^2.3.0",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^5.1.0",
+    "chai-enzyme": "^0.5.0",
+    "cheerio": "^0.22.0",
+    "classnames": "^2.2.5",
+    "codecov": "^1.0.1",
+    "codemirror": "^5.17.0",
     "css-loader": "^0.24.0",
-    "cssnano": "^3.7.4",
+    "cssnano": "^3.7.3",
     "debug": "^2.2.0",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "dotenv": "^2.0.0",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.4.0",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-config-standard-react": "^4.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-standard": "^2.0.0",
+    "extended-define-webpack-plugin": "^0.1.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "fs-extra": "^0.30.0",
-    "history": "^2.0.0",
+    "history": "^2.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "html2canvas": "^0.5.0-beta4",
+    "humanize-string": "^1.0.1",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
+    "karma": "^1.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack-with-fast-source-maps": "^1.9.2",
     "koa": "^2.0.0-alpha.3",
     "koa-connect-history-api-fallback": "^0.3.1",
     "koa-convert": "^1.2.0",
     "koa-proxy": "^0.6.0",
-    "koa-static": "^3.0.0",
-    "node-sass": "^3.7.0",
-    "normalize.css": "^4.1.1",
-    "postcss-loader": "^0.11.1",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.2.0",
-    "react-router-redux": "^4.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.0.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "yargs": "^5.0.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^6.0.0-beta.6",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.3.0",
-    "chai-enzyme": "^0.5.0",
-    "cheerio": "^0.20.0",
-    "codecov": "^1.0.1",
-    "enzyme": "^2.0.0",
-    "eslint": "^3.0.1",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-config-standard-react": "^4.0.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-promise": "^2.0.0",
-    "eslint-plugin-react": "^6.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "isparta-loader": "^2.0.0",
-    "karma": "^1.0.0",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "mocha": "^3.0.1",
-    "nodemon": "^1.10.2",
+    "koa-static": "^2.0.0",
+    "liquid.js": "^1.3.2",
+    "loadjs": "^3.0.0",
+    "mocha": "^3.0.2",
+    "moment": "^2.14.1",
+    "mqtt": "^1.13.0",
+    "node-sass": "^3.9.0",
+    "nodemon": "^1.10.0",
+    "normalize.css": "^4.2.0",
+    "normalizr": "^2.2.1",
+    "packageify": "^1.0.0",
+    "papaparse": "^4.1.2",
     "phantomjs-prebuilt": "^2.1.12",
-    "react-addons-test-utils": "^15.0.0",
-    "redbox-react": "^1.2.10",
+    "pluralize": "^3.0.0",
+    "postcss-loader": "^0.11.1",
+    "query-string": "^4.2.3",
+    "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-addons-test-utils": "^15.3.0",
+    "react-codemirror": "^0.2.6",
+    "react-dom": "^15.3.0",
+    "react-dropzone": "^3.6.0",
+    "react-frame-component": "^0.6.5",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "react-input-mask": "^0.7.3",
+    "react-portal": "^2.2.1",
+    "react-redux": "^4.0.0",
+    "react-router": "^3.0.0-alpha.1",
+    "react-router-redux": "^4.0.5",
+    "react-router-redux-params": "^1.0.1",
+    "redbox-react": "^1.3.0",
+    "redux": "^3.6.0",
+    "redux-form": "^5.3.2",
+    "redux-mock-store": "^1.1.2",
+    "redux-thunk": "^2.0.0",
+    "reselect": "^2.5.3",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.1",
+    "scroll-behavior": "^0.7.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
+    "store": "^1.3.20",
+    "style-loader": "^0.13.0",
+    "transform-loader": "^0.2.3",
+    "url-loader": "^0.5.6",
+    "validatorjs": "^3.6.0",
+    "webpack": "^2.1.0-beta.21",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-s3-plugin": "^0.9.0",
+    "yargs": "^5.0.0"
   }
 }
