--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "koa-static": "^2.0.0",
     "liquid.js": "^1.3.2",
     "loadjs": "^3.0.0",
+    "material-ui": "^0.15.4",
     "mocha": "^3.0.2",
     "moment": "^2.14.1",
     "mqtt": "^1.13.0",
@@ -201,6 +202,7 @@
     "react-router": "^3.0.0-alpha.1",
     "react-router-redux": "^4.0.5",
     "react-router-redux-params": "^1.0.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.3.0",
     "redux": "^3.6.0",
     "redux-form": "^5.3.2",
