--- a/package.json
+++ b/package.json
@@ -108,9 +108,11 @@
   "author": "Ranier Montalbo",
   "license": "MIT",
   "dependencies": {
+    "aliasify": "^2.0.0",
     "auth0-lock": "^9.2.1",
     "aws-mqtt-client": "0.0.4",
     "aws-sdk": "^2.5.5",
+    "aws4": "^1.4.1",
     "axios": "^0.12.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
@@ -187,6 +189,7 @@
     "pluralize": "^3.0.0",
     "postcss-loader": "^0.11.1",
     "query-string": "^4.2.3",
+    "querystring-browser": "^1.0.4",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
