--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "chai-enzyme": "^0.5.0",
+    "chart.js": "^2.2.2",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "codecov": "^1.0.1",
