BB pipelines integration

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DEV_SECRET_ACCESS_KEY=
 PROD_ACCESS_KEY_ID=
 PROD_SECRET_ACCESS_KEY=
 
+# bitbucket pipelines env vars
+AWS_KEY=
+AWS_SECRET=
+S3_BUCKET_NAME=
+CF_DISTRIBUTION_ID=
