--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,5 +5,6 @@ pipelines:
         script:
           - npm --version
           - npm install
+          - bin/create_pipelines_env.sh
           - npm test
           - npm run deploy:prod
