--- a/package.json
+++ b/package.json
@@ -222,7 +222,7 @@
     "transform-loader": "^0.2.3",
     "url-loader": "^0.5.6",
     "validatorjs": "^3.6.0",
-    "webpack": "^2.1.0-beta.21",
+    "webpack": "2.1.0-beta.21",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-hot-middleware": "^2.12.2",
