--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "humanize-string": "^1.0.1",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
+    "isparta-loader": "2.0.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
