--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,11 @@
 image: node:6.3.1
 pipelines:
-  master:
-    - step:
-        script:
-          - npm --version
-          - npm install
-          - bin/create_pipelines_env.sh
-          - npm test
-          - npm run deploy:prod
+  branches:
+    master:
+      - step:
+          script:
+            - npm --version
+            - npm install
+            - bin/create_pipelines_env.sh
+            - npm test
+            - npm run deploy:prod
