--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "html-webpack-plugin": "^2.22.0",
     "html2canvas": "^0.5.0-beta4",
     "humanize-string": "^1.0.1",
+    "iban": "0.0.7",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "isparta-loader": "2.0.0",
