--- a/package.json
+++ b/package.json
@@ -110,13 +110,13 @@
   "dependencies": {
     "aliasify": "^2.0.0",
     "auth0-lock": "^9.2.1",
-    "aws-mqtt-client": "0.0.4",
+    "aws-mqtt-client": "0.0.5",
     "aws-sdk": "^2.5.5",
     "aws4": "^1.4.1",
     "axios": "^0.12.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-rewire": "^1.0.0-rc-6",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -128,28 +128,29 @@
     "babel-register": "^6.11.6",
     "babel-runtime": "^6.11.6",
     "base64-url": "^1.3.2",
-    "better-npm-run": "0.0.11",
+    "better-npm-run": "0.0.12",
     "brfs": "^1.4.3",
     "browser-filesaver": "^1.1.1",
-    "card-validator": "^2.3.0",
+    "card-validator": "^3.0.0",
     "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
+    "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.5.0",
     "chart.js": "^2.2.2",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "codecov": "^1.0.1",
     "codemirror": "^5.17.0",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.25.0",
     "cssnano": "^3.7.3",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
+    "empty-module": "0.0.2",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^6.2.0",
     "eslint-plugin-standard": "^2.0.0",
     "extended-define-webpack-plugin": "^0.1.0",
@@ -163,8 +164,6 @@
     "iban": "0.0.7",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
-    "isparta-loader": "2.0.0",
-    "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-coverage": "^1.1.1",
@@ -181,16 +180,16 @@
     "loadjs": "^3.0.0",
     "mocha": "^3.0.2",
     "moment": "^2.14.1",
-    "mqtt": "^1.13.0",
+    "mqtt": "^2.0.1",
     "node-sass": "^3.9.0",
     "nodemon": "^1.10.0",
-    "normalize.css": "^4.2.0",
+    "normalize.css": "^5.0.0",
     "normalizr": "^2.2.1",
     "packageify": "^1.0.0",
     "papaparse": "^4.1.2",
     "phantomjs-prebuilt": "^2.1.12",
     "pluralize": "^3.0.0",
-    "postcss-loader": "^0.11.1",
+    "postcss-loader": "^1.0.0",
     "query-string": "^4.2.3",
     "querystring-browser": "^1.0.4",
     "react": "^15.3.0",
@@ -229,6 +228,6 @@
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-s3-plugin": "^0.9.0",
-    "yargs": "^5.0.0"
+    "yargs": "^6.3.0"
   }
 }
