--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "babel-core": "^6.13.2",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-rewire": "^1.0.0-rc-6",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.13.0",
@@ -141,7 +142,7 @@
     "codecov": "^1.0.1",
     "codemirror": "^5.17.0",
     "css-loader": "^0.25.0",
-    "cssnano": "^3.7.3",
+    "cssnano": "^3.8.0",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
     "empty-module": "0.0.2",
@@ -203,7 +204,7 @@
     "react-input-mask": "^0.7.3",
     "react-portal": "^2.2.1",
     "react-redux": "^4.0.0",
-    "react-router": "^3.0.0-alpha.1",
+    "react-router": "3.0.0-alpha.1",
     "react-router-redux": "^4.0.5",
     "react-router-redux-params": "^1.0.1",
     "react-tap-event-plugin": "^1.0.0",
