--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "axios": "^0.12.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.6",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-rewire": "^1.0.0-rc-6",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -148,7 +148,7 @@
     "empty-module": "0.0.2",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
-    "eslint-config-standard": "^6.0.0",
+    "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-promise": "^3.3.0",
@@ -204,7 +204,7 @@
     "react-input-mask": "^0.7.3",
     "react-portal": "^2.2.1",
     "react-redux": "^4.0.0",
-    "react-router": "3.0.0-alpha.1",
+    "react-router": "^3.0.0-alpha.1",
     "react-router-redux": "^4.0.5",
     "react-router-redux-params": "^1.0.1",
     "react-tap-event-plugin": "^1.0.0",
