--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
     "react-codemirror": "^0.2.6",
+    "react-datetime": "^2.6.2",
     "react-dom": "^15.3.0",
     "react-dropzone": "^3.6.0",
     "react-frame-component": "^0.6.5",
