--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
-DEV_ACCESS_KEY_ID=
-DEV_SECRET_ACCESS_KEY=
-PROD_ACCESS_KEY_ID=
-PROD_SECRET_ACCESS_KEY=
-
-# bitbucket pipelines env vars
-AWS_KEY=
-AWS_SECRET=
-S3_BUCKET_NAME=
-CF_DISTRIBUTION_ID=
+BASENAME=
+DEV_AWS_KEY=
+DEV_AWS_SECRET=
+AWS_KEY=''
+AWS_SECRET=''
+CF_DISTRIBUTION_ID=''
