--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "css-loader": "^0.26.0",
     "cssnano": "^3.8.0",
     "debug": "^2.3.3",
+    "dot-object": "^1.5.4",
     "dotenv": "^2.0.0",
     "empty-module": "0.0.2",
     "enzyme": "^2.6.0",
