--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,17 @@ script:
   - npm --version
   - npm install
 deploy:
-  - provider: script
-    script:
-      - CF_DISTRIBUTION_ID=$PROD_CF_DISTRIBUTION_ID; S3_BUCKET_NAME=$PROD_S3_BUCKET_NAME
-      - npm run deploy:prod
-    on:
-      branch: release
+  # - provider: script
+  #   script:
+  #     - CF_DISTRIBUTION_ID=$PROD_CF_DISTRIBUTION_ID; S3_BUCKET_NAME=$PROD_S3_BUCKET_NAME
+  #     - npm run deploy:prod
+  #   on:
+  #     branch: release
 
-  - provider: script
-    script:
-      - CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID; S3_BUCKET_NAME=$STAGING_S3_BUCKET_NAME
-      - npm run deploy:prod
-    on:
-      branch: master
+  provider: script
+  script:
+    - CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID; S3_BUCKET_NAME=$STAGING_S3_BUCKET_NAME
+    - npm run deploy:prod
+  on:
+    branch: master
 
