--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ deploy:
   #     branch: release
 
   provider: script
-  script:
-    - CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID; S3_BUCKET_NAME=$STAGING_S3_BUCKET_NAME
-    - npm run deploy:prod
+  script: CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID S3_BUCKET_NAME=$STAGING_S3_BUCKET_NAME npm run deploy:prod
   on:
     branch: master
 
