--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script:
 after_success:
   - test $TRAVIS_BRANCH = "master" &&
     CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID S3_BUCKET_NAME=$STAGING_S3_BUCKET_NAME npm run deploy:prod
+  - test $TRAVIS_BRANCH = "release" &&
+    CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID S3_BUCKET_NAME=$STAGING_S3_BUCKET_NAME npm run deploy:prod
 # deploy:
 #   # - provider: script
 #   #   script:
