configure staging environment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 BASENAME=
 DEV_AWS_KEY=
 DEV_AWS_SECRET=
-AWS_KEY=''
-AWS_SECRET=''
-CF_DISTRIBUTION_ID=''
+DEV_S3_BUCKET_NAME=
+AWS_KEY=
+AWS_SECRET=
+S3_BUCKET_NAME=
+CF_DISTRIBUTION_ID=
