--- a/.eslintrc
+++ b/.eslintrc
@@ -47,12 +47,10 @@
     ],
     "no-return-assign": 0,
     "react/jsx-no-bind": 0,
-    "generator-star-spacing": 0,
-    "babel/generator-star-spacing": 1,
-    "babel/array-bracket-spacing": 1,
+    "generator-star-spacing": 1,
+    "array-bracket-spacing": 1,
+    "object-shorthand": 1,
     "babel/object-curly-spacing": 1,
-    "babel/object-shorthand": 1,
-    "babel/no-await-in-loop": 1,
-    "babel/flow-object-type": 1
+    "babel/no-await-in-loop": 1
   }
 }
