--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - npm --version
   - npm install
 after_success:
- - if [[ "$TRAVIS_BRANCH" == "master" ]]; then CF_DISTRIBUTION_ID=$STAGING_CF_DISTRIBUTION_ID npm run deploy; elif [[ "$TRAVIS_BRANCH" == "release" ]]; then CF_DISTRIBUTION_ID=$PROD_CF_DISTRIBUTION_ID npm run deploy:prod; fi
+ - if [[ "$TRAVIS_BRANCH" == "master" && "$TRAVIS_PULL_REQUEST" = "false" ]]; then npm run deploy; rc=$?; elif [[ "$TRAVIS_BRANCH" == "release" && "$TRAVIS_PULL_REQUEST" = "false" ]]; then npm run deploy:prod; rc=$?; fi; exit $rc;
 # deploy:
 #   - provider: script
 #     name: prod-deploy
