--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "react-router-redux": "^4.0.7",
     "react-router-redux-params": "^1.0.1",
     "react-tap-event-plugin": "^2.0.1",
+    "react-youtube": "^7.2.0",
     "redbox-react": "^1.3.3",
     "redux": "^3.6.0",
     "redux-form": "^5.3.2",
