--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "aliasify": "^2.1.0",
     "auth0-lock": "^9.2.1",
     "aws-mqtt-client": "0.0.5",
-    "aws-sdk": "^2.7.6",
+    "aws-sdk": "^2.7.8",
     "aws4": "^1.4.1",
     "axios": "^0.12.0",
     "babel-cli": "^6.11.4",
@@ -141,15 +141,15 @@
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "codecov": "^1.0.1",
-    "codemirror": "^5.17.0",
+    "codemirror": "^5.21.0",
     "css-loader": "^0.26.0",
-    "cssnano": "^3.8.0",
+    "cssnano": "^3.8.1",
     "debug": "^2.3.3",
     "dot-object": "^1.5.4",
     "dotenv": "^2.0.0",
     "empty-module": "0.0.2",
     "enzyme": "^2.6.0",
-    "eslint": "^3.10.2",
+    "eslint": "^3.11.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^4.0.0",
@@ -185,7 +185,7 @@
     "koa-static": "^2.0.0",
     "liquid.js": "^1.3.2",
     "loadjs": "^3.0.0",
-    "mocha": "^3.0.2",
+    "mocha": "^3.2.0",
     "moment": "^2.17.0",
     "mqtt": "^2.1.3",
     "node-sass": "^3.13.0",
@@ -199,19 +199,19 @@
     "postcss-loader": "^1.1.1",
     "query-string": "^4.2.3",
     "querystring-browser": "^1.0.4",
-    "react": "^15.4.0",
-    "react-addons-css-transition-group": "^15.4.0",
-    "react-addons-test-utils": "^15.4.0",
+    "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-codemirror": "^0.2.6",
     "react-datetime": "^2.7.5",
-    "react-dom": "^15.4.0",
+    "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
     "react-frame-component": "^0.6.5",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-input-mask": "^0.7.3",
     "react-portal": "^3.0.0",
     "react-redux": "^4.4.6",
-    "react-router": "^3.0.0-alpha.1",
+    "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-router-redux-params": "^1.0.1",
     "react-tap-event-plugin": "^2.0.1",
