--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "aliasify": "^2.1.0",
     "auth0-lock": "^9.2.1",
     "aws-mqtt-client": "0.0.5",
-    "aws-sdk": "^2.7.8",
+    "aws-sdk": "^2.7.9",
     "aws4": "^1.4.1",
     "axios": "^0.12.0",
     "babel-cli": "^6.11.4",
@@ -224,13 +224,13 @@
     "reselect": "^2.5.3",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.1",
-    "scroll-behavior": "^0.7.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "store": "^1.3.20",
     "style-loader": "^0.13.0",
     "transform-loader": "^0.2.3",
     "url-loader": "^0.5.6",
+    "use-scroll-behavior": "^0.1.5",
     "validatorjs": "^3.9.0",
     "webpack": "2.1.0-beta.21",
     "webpack-dev-middleware": "^1.6.1",
