--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-router-redux-params": "^1.0.1",
+    "react-router-scroll": "^0.4.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-youtube": "^7.2.0",
     "redbox-react": "^1.3.3",
@@ -230,7 +231,6 @@
     "style-loader": "^0.13.0",
     "transform-loader": "^0.2.3",
     "url-loader": "^0.5.6",
-    "use-scroll-behavior": "^0.1.5",
     "validatorjs": "^3.9.0",
     "webpack": "2.1.0-beta.21",
     "webpack-dev-middleware": "^1.6.1",
