--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "reselect": "^2.5.3",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.1",
+    "scriptjs": "^2.5.8",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "store": "^1.3.20",
