--- a/package.json
+++ b/package.json
@@ -112,13 +112,13 @@
     "aliasify": "^2.1.0",
     "auth0-lock": "^9.2.1",
     "aws-mqtt-client": "0.0.5",
-    "aws-sdk": "^2.7.13",
+    "aws-sdk": "^2.7.20",
     "aws4": "^1.4.1",
     "axios": "^0.12.0",
     "babel-cli": "^6.11.4",
-    "babel-core": "^6.20.0",
+    "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.9",
+    "babel-loader": "^6.2.10",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-rewire": "^1.0.0-rc-6",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -141,15 +141,15 @@
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "codecov": "^1.0.1",
-    "codemirror": "^5.21.0",
+    "codemirror": "^5.22.0",
     "css-loader": "^0.26.1",
     "cssnano": "^3.9.1",
-    "debug": "^2.3.3",
+    "debug": "^2.6.0",
     "dot-object": "^1.5.4",
     "dotenv": "^2.0.0",
     "empty-module": "0.0.2",
-    "enzyme": "^2.6.0",
-    "eslint": "^3.12.1",
+    "enzyme": "^2.7.0",
+    "eslint": "^3.12.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^4.0.0",
@@ -166,7 +166,7 @@
     "gulp-if": "^2.0.2",
     "gulp-invalidate-cloudfront": "^0.1.2",
     "history": "^3.0.0",
-    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-plugin": "^2.25.0",
     "html2canvas": "^0.5.0-beta4",
     "humanize-string": "^1.0.1",
     "iban": "0.0.7",
@@ -182,15 +182,15 @@
     "koa": "^2.0.0-alpha.3",
     "koa-connect-history-api-fallback": "^0.3.1",
     "koa-convert": "^1.2.0",
-    "koa-proxy": "^0.6.0",
+    "koa-proxy": "^0.7.0",
     "koa-static": "^2.0.0",
     "liquid.js": "^1.3.2",
-    "loadjs": "^3.2.0",
+    "loadjs": "^3.2.1",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
-    "monei-jsapi": "1.0.0",
+    "monei-jsapi": "^1.0.2",
     "mqtt": "^2.1.3",
-    "node-sass": "^4.0.0",
+    "node-sass": "^4.1.1",
     "nodemon": "^1.10.0",
     "normalize.css": "^5.0.0",
     "normalizr": "^2.3.0",
@@ -205,9 +205,9 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-codemirror": "^0.3.0",
-    "react-datetime": "^2.7.5",
+    "react-datetime": "^2.8.1",
     "react-dom": "^15.4.1",
-    "react-dropzone": "^3.7.3",
+    "react-dropzone": "^3.8.0",
     "react-frame-component": "^0.6.5",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-input-mask": "^0.7.3",
@@ -226,19 +226,19 @@
     "redux-thunk": "^2.0.0",
     "reselect": "^2.5.3",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.1",
+    "sass-loader": "^4.1.1",
     "scriptjs": "^2.5.8",
-    "sinon": "^1.17.5",
+    "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "store": "^1.3.20",
     "style-loader": "^0.13.0",
     "transform-loader": "^0.2.3",
     "url-loader": "^0.5.6",
-    "validatorjs": "^3.9.0",
+    "validatorjs": "^3.11.0",
     "webpack": "2.1.0-beta.21",
-    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "^2.1.0-beta.0",
-    "webpack-hot-middleware": "^2.13.2",
-    "yargs": "^6.5.0"
+    "webpack-hot-middleware": "^2.14.0",
+    "yargs": "^6.6.0"
   }
 }
