--- a/package.json
+++ b/package.json
@@ -188,7 +188,7 @@
     "loadjs": "^3.2.1",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
-    "monei-jsapi": "^1.1.5",
+    "monei-widget": "^1.0.0",
     "mqtt": "^2.2.0",
     "node-sass": "^4.1.1",
     "nodemon": "^1.10.0",
